--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipiesapi",
+  "name": "recipes",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,26 +9,24 @@
     "dev-start": "nodemon server.js",
     "swagger": "node ./swagger.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "auth": "^0.0.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "express-openid-connect": "^2.17.1",
-    "mongodb": "^6.2.0",
-    "nodemon": "^3.0.1",
-    "swagger": "^0.0.1",
-    "swagger-autogen": "^2.23.7",
+    "express-validator": "^7.0.1",
+    "mongodb": "^6.1.0",
     "swagger-ui-express": "^5.0.0"
   },
   "engines": {
     "node": ">=14 <18.17.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "swagger-autogen": "^2.23.6"
   }
 }
