--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "googleapis": "^105.0.0",
     "mongodb": "^6.2.0",
     "node.js": "0.0.1-security",
-    "swagger": "^0.7.5",
+    "swagger": "^0.6.0",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=14 <18.17.1"
   }
 }
