--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "swagger": "node ./swagger.js"
   },
@@ -28,8 +28,6 @@
     "express-validator": "^7.0.1",
     "googleapis": "^105.0.0",
     "mongodb": "^6.2.0",
-    "node.js": "0.0.1-security",
-    "swagger": "^0.6.0",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
   },
@@ -37,6 +35,14 @@
     "node": ">=14 <18.17.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/register": "^7.22.15",
+    "@shelf/jest-mongodb": "^4.2.0",
+    "@types/supertest": "^2.0.16",
+    "esm": "^3.2.25",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
