--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "recipiesapi",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "swagger": "node ./swagger.js"
+    "start": "ts-node server.ts",
+    "swagger": "node ./swagger.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,11 @@
   "homepage": "https://github.com/lingarner/RecipiesAPI#readme",
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^20.10.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -27,7 +32,7 @@
     "express-openid-connect": "^2.17.1",
     "express-validator": "^7.0.1",
     "googleapis": "^105.0.0",
-    "mongodb": "^6.2.0",
+    "mongodb": "^6.3.0",
     "node.js": "0.0.1-security",
     "swagger": "^0.6.0",
     "swagger-autogen": "^2.23.6",
@@ -37,6 +42,7 @@
     "node": ">=14 <18.17.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.1"
   }
 }
