--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node server.ts",
-    "swagger": "node ./swagger.ts"
+    "build": "npx tsc",
+    "start": "npm run build && nodemon dist/server.js",
+    "swagger": "ts-node ./swagger.ts"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/mongodb": "^4.0.7",
-    "@types/node": "^20.10.4",
-    "body-parser": "^1.20.2",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -34,6 +34,7 @@
     "googleapis": "^105.0.0",
     "mongodb": "^6.3.0",
     "node.js": "0.0.1-security",
+    "rimraf": "^5.0.5",
     "swagger": "^0.6.0",
     "swagger-autogen": "^2.23.6",
     "swagger-ui-express": "^5.0.0"
@@ -42,7 +43,13 @@
     "node": ">=14 <18.17.1"
   },
   "devDependencies": {
+    "@types/node": "^20.10.4",
+    "@types/swagger-ui-express": "^4.1.6",
+    "body-parser": "^1.20.2",
     "jest": "^29.7.0",
-    "ts-node": "^10.9.1"
+    "nodemon": "^3.0.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.3"
   }
 }
