--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
-    "start": "npm run build && nodemon dist/server.js",
+    "start": "nodemon --exec ts-node server.ts",
     "swagger": "ts-node ./swagger.ts"
   },
   "repository": {
@@ -24,7 +24,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/mongodb": "^4.0.7",
+    "circular-json": "^0.5.9",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -42,6 +42,7 @@
     "node": ">=14 <18.17.1"
   },
   "devDependencies": {
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^20.10.4",
     "@types/swagger-ui-express": "^4.1.6",
     "body-parser": "^1.20.2",
@@ -49,7 +50,7 @@
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
