--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noEmit": true, // or set "emitDeclarationOnly": true
     "allowImportingTsExtensions": true,
     "target": "ES2020",
-    "module": "esnext",
+    "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
